src/Pages/Home/Home.css
.banner_container {
    position: relative;
    width: 100%;
    height: 28vmax;
    display: flex;
    white-space: pre-wrap
}

.banner_image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    opacity: 0.25;
    border-radius: 20px;
}

.home_banner {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 35%;
    z-index: 1;
    padding: 20px;
    font-size: 1vmax;
}

.banner_title {
    font-size: 2.5vmax;
    margin: 15px 0;
}

.home_genre {
    border: 2px solid white;
    font-weight: 600;
    padding: 0.7% 2% 1% 2%;
    margin-right: 1%;
    border-radius: 30px;
}

.banner_overview {
    font-size: 1.2em;
}

@media (max-width: 768px) {
    .banner_title {
        font-size: 1.5rem;
    }

    .details {
        display: none;
    }

    .banner_image {
        margin-top: 1%;
    }

    .home_banner {
        align-items: center;
        width: 100%;
    }
}

@media (max-width: 425px) {
    .banner_container {
        height: 25vmax;
    }
}

